# GoofyRay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.cpp.old
src/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  ObjLoader.cpp  ObjLoader.h  Scene.cpp  Scene.hpp
src/lodepng/: CMakeLists.txt
src/object/: CMakeLists.txt  Object.hpp  Plane.cpp  Plane.hpp  Polygon.cpp  Polygon.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.h
src/rayimage/: CMakeLists.txt  Image.cpp  Image.hpp
src/raymath/: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Light.cpp  Light.h  Light.hpp  Ray.cpp  Ray.h  Ray.hpp  Vector.h  Vector3.cpp  Vector3.h  hittable.h
src/raymath/rayobject/: sphere.cpp
src/shapes/: CMakeLists.txt  Hittable.hpp  Plane.cpp  Plane.hpp  Polygon.cpp  Polygon.hpp  Sphere.cpp  Sphere.hpp
src/userinputs/: CMakeLists.txt  Uinputs.cpp  Uinputs.hpp
